--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,9 @@
     "version": "2.0.0",
     "tasks": [
       {
-        "type": "Run Server",
-        "tsconfig": "tsconfig.json",
-        "problemMatcher": ["$tsc"],
-        "group": {
-          "kind": "build",
-          "isDefault": true
-        }
+        "label": "Start NodeJS Server",
+        "type": "shell",
+        "command": "yarn run start"
       }
     ]
 }
