--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "Start NodeJS Server",
         "type": "shell",
-        "command": "yarn run start"
+        "command": "yarn run start",
       }
     ]
 }
