--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,10 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "Start NodeJS Server",
-        "type": "shell",
-        "command": "yarn run start",
-      }
-    ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Start NodeJS Server",
+			"type": "shell",
+			"command": "yarn run start"
+		}
+	]
 }
